--- a/app/auth/templates/dashboard.html
+++ b/app/auth/templates/dashboard.html
@@ -8,32 +8,36 @@
     {% block content %}
         <h2>Welcome: {{ current_user.email }}</h2>
         {{ render_table(data) }}
+        {% from 'bootstrap5/pagination.html' import render_pagination %}
 
+        {{ render_pagination(pagination) }}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
         <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap5.min.js"></script>
-        <script src="https://cdn.datatables.net/buttons/2.2.2/js/dataTables.buttons.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
-        <script src="https://cdn.datatables.net/buttons/2.2.2/js/buttons.html5.min.js"></script>
-        <script src="https://cdn.datatables.net/buttons/2.2.2/js/buttons.print.min.js"></script>
-
-
         <script type=text/javascript>
             $(document).ready(function () {
-                $('.table').DataTable({
-                        dom: 'Bfrtip',
-                        buttons: [
-                            'copy', 'csv', 'excel', 'pdf', 'print'
-                        ]
-                    }
-                );
+                $('.table').DataTable();
             });
+
+            const data = null;
+
+            const xhr = new XMLHttpRequest();
+            xhr.withCredentials = true;
+
+            xhr.addEventListener("readystatechange", function () {
+                if (this.readyState === this.DONE) {
+                    console.log(this.responseText);
+                }
+            });
+
+            xhr.open("GET", "https://theaudiodb.p.rapidapi.com/discography.php?s=coldplay");
+            xhr.setRequestHeader("X-RapidAPI-Host", "theaudiodb.p.rapidapi.com");
+            xhr.setRequestHeader("X-RapidAPI-Key", "8c55cd5ec4msha52585d64324642p12f37fjsne5db3e973cea");
+
+            xhr.send(data);
+
+
         </script>
-
-
-
     {% endblock %}
 </div>
 
